Dark mode, fix multigame bug

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,10 @@
 /* || Variables */
 
+html {
+  --background-color: rgb(0, 0, 0);
+  --main-text-color: rgb(255, 255, 255);
+}
+
 /* || Default Styles */
 
 html {
@@ -8,7 +13,9 @@ html {
 }
 
 body {
-  font-family: monospace;
+  background-color: var(--background-color);
+  color: var(--main-text-color);
+  font-family: "Space Mono", monospace;
   font-size: 1.6rem;
   max-width: 100rem;
   margin: auto;
@@ -35,8 +42,7 @@ body {
      -khtml-user-select: none; /* Konqueror HTML */
        -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
 .text-center {
@@ -50,10 +56,14 @@ body {
 /* || Sitewide Styles */
 
 .button {
+  background-color: rgb(255, 253, 255);
   border: .1rem solid rgba(92, 92, 92, 1);
   border-radius: 1rem;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   display: inline-block;
+  box-shadow: 0 0 3px rgb(0, 0, 0);
+  font-weight: bold;
   margin: 1rem;
   padding: 1rem;
 }
@@ -92,6 +102,10 @@ body {
 
 /* || Specific Styles */
 
+.github-icon {
+  filter: invert(100%);
+}
+
 .title {
   margin: 2rem;
 }
@@ -106,8 +120,8 @@ body {
   font-weight: normal;
 }
 
-.keys:hover {
-  text-shadow: 0 0 5px rgb(255, 253, 153);
+.keys-legend:hover {
+  cursor: pointer;
 }
 
 .score-wrapper {
@@ -124,7 +138,7 @@ body {
 }
 
 .game-canvas {
-  border: 1px solid rgb(92, 92, 92);
+  border: 3px solid rgb(192, 192, 192);
   height: 100%;
   width: 100%;
 }
